--- a/index.html
+++ b/index.html
@@ -25,33 +25,14 @@
 <body>
 
 <div class="button-container">
-  <button class="button" onclick="function1()">Function 1</button>
+  <button class="button" onclick="roblox()">Roblox</button>
   <button class="button" onclick="function2()">Function 2</button>
   <button class="button" onclick="function3()">Function 3</button>
   <button class="button" onclick="function4()">Function 4</button>
 </div>
 
-<script>
-  function function1() {
-    alert("You clicked Function 1");
-    // Add your custom functionality here
-  }
 
-  function function2() {
-    alert("You clicked Function 2");
-    // Add your custom functionality here
-  }
-
-  function function3() {
-    alert("You clicked Function 3");
-    // Add your custom functionality here
-  }
-
-  function function4() {
-    alert("You clicked Function 4");
-    // Add your custom functionality here
-  }
-</script>
+<script src="roblox.js"></script>
 
 </body>
 </html>
